--- a/InformeJuan.ipynb
+++ b/InformeJuan.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMBYDy4nFot7xi8Qym5/mr8"
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -18,10 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Informe de Resultados\n",
-        "Analisis de la recopilación de datos, y conclusiones.\n",
-        "\n",
-        "En la presente"
+        "# Informe de Resultados"
       ],
       "metadata": {
         "id": "SYwDcJyP85Y1"
@@ -30,20 +26,136 @@
     {
       "cell_type": "markdown",
       "source": [
-        "presentacion Proposito o Intencion, metodología (tecnicas de recopilacion, evidencias), Descripción (Detalle certero), análisis , conclusiones, recomendaciones"
+        "## Introduccion"
+      ],
+      "metadata": {
+        "id": "1xXR1LZL8uQS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "El objetivo de este análisis es apoyar la toma de decisión del Sr. Juan sobre cuál de sus 4 tiendas de la cadena Alura Store debería vender para iniciar un nuevo emprendimiento.\n",
+        "\n",
+        "Utilizando los datos proporcionados y herramientas de análisis en Python, identificamos fortalezas y debilidades de cada tienda en base a sus ingresos, tipos de productos, satisfacción del cliente y eficiencia logística."
       ],
       "metadata": {
         "id": "jzoGZPpQ8ka6"
       }
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "### 1️⃣ Ingresos totales de las tiendas"
+      ],
       "metadata": {
-        "id": "lOy6l9kL31Um"
-      },
-      "outputs": [],
-      "source": []
+        "id": "_vJOTy-o9DbW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*En primer lugar, calculé el ingreso total de cada tienda sumando todos los valores de la columna \"Precio\". Esto nos permite ver rápidamente cuál tienda genera más recursos y cuál menos, pero no debemos decidirnos sólo por este factor*"
+      ],
+      "metadata": {
+        "id": "9E13jVkh9Faq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "n8c7qvZf9TQl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 2️⃣ Productos más y menos vendidos por categoría"
+      ],
+      "metadata": {
+        "id": "BzADyOr79Vky"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Luego, agrupé las ventas por \"Categoría del Producto\". Así descubrimos cuáles son los tipos de productos más populares y cuáles apenas se venden.\n",
+        "\n",
+        "Una tienda puede tener ingresos altos por vender un producto de alto valor, pero si depende mucho de un solo tipo, su negocio es más vulnerable a cambios del mercado.\n",
+        "\n",
+        "En tus gráficos, se aprecia la distribución de ventas por categoría en cada tienda. *italicized text*"
+      ],
+      "metadata": {
+        "id": "ejirOUt59ZqA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "vQtHmZty9cgm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 3️⃣ Calificaciones promedio de los clientes\n",
+        "Analizar la satisfacción del cliente (columna “Calificación”) permite detectar problemas de calidad, atención o insatisfacción general, que pueden anticipar una pérdida de ventas en el futuro.\n",
+        "\n",
+        "En los gráficos y promedios, compara entre tiendas: las que tengan calificaciones bajas presentan un riesgo a mediano/largo plazo."
+      ],
+      "metadata": {
+        "id": "4DqY4x4n9dK_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 4️⃣ Productos individuales: estrellas y rezagados\n",
+        "Identificar los productos más vendidos y los menos vendidos es clave para saber si el éxito o fracaso de una tienda depende de productos puntuales y si hay margen para diversificar.\n",
+        "\n",
+        "Muestra los productos \"estrella\" y los que apenas tienen rotación mediante los gráficos generados.\n",
+        "\n",
+        "Una tienda con muchos productos de bajo desempeño necesita revisar su oferta."
+      ],
+      "metadata": {
+        "id": "_wXjudAj9rMS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 5️⃣ Costo de envío promedio\n",
+        "Por último, el costo de envío puede ser un punto ciego: si es muy alto, puede reducir los márgenes de ganancia o desincentivar ventas.\n",
+        "\n",
+        "Al comparar el promedio de costo de envío entre tiendas, vemos cuáles operan de manera más eficiente y cuáles gastan más en logística.\n",
+        "\n",
+        "Puedes mostrar estos datos en un gráfico de barras adicional."
+      ],
+      "metadata": {
+        "id": "W0xrJI5r9tHD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ✅ Conclusión y Recomendación\n",
+        "Después de analizar todos los factores anteriores y visualizarlos:\n",
+        "\n",
+        "La tienda recomendada para vender es Tienda 2 que, aunque podría no ser la de menor ingreso absoluto, muestra de forma consistente debilidades en varias áreas:\n",
+        "\n",
+        "Margen de ingreso bajo o decreciente,\n",
+        "\n",
+        "Satisfacción de clientes inferior a la media,\n",
+        "\n",
+        "Oferta concentrada en pocas categorías o productos,\n",
+        "\n",
+        "Costos logísticos elevados."
+      ],
+      "metadata": {
+        "id": "SYlVXXdj9xig"
+      }
     }
   ]
 }
